# cmake-cpack-demo

./: .gitignore  CMakeLists.txt  LICENSE
include/: greet.h
src/cli/: main.c
src/lib/: greet.c
